--- a/styles.css
+++ b/styles.css
@@ -79,7 +79,7 @@ body {
 }
 
 #start-btn:hover {
-    background-color: #003366;
+    background-color: #77A8BB;
 }
 
 #restart-btn {
@@ -93,7 +93,7 @@ body {
 }
 
 #restart-btn:hover {
-    background-color: #003366;
+    background-color: #77A8BB;
 }
 
 .score {
